welcome.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: list-deployment
  labels:
    app: list
spec:
  replicas: 1
  selector:
    matchLabels:
      app: list
  template:
    metadata:
      labels: # labels to select/identify the deployment
        app: list 
    spec:     # pod spec                  
      containers: 
      - name: list
        image: neethusnair/list-docker:latest # image we pushed
        #imagePullPolicy: Never
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: list-service
spec:
  selector:
    app: list   
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
      nodePort: 30001
