vs-list.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: list-vs
spec:
  hosts:
    - 'list-service.default.svc.cluster.local'
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: list-service.default.svc.cluster.local
            port:
              number: 4000
